tests/cli_diagnostics/check_type_error.golden
tests/fixtures/check_type_error.curlee:2:3: error: return type mismatch: expected Unit, got Int
  |
  |   return 0;
  |   ^^^^^^^^^
